fix ThePresentation alignment

--- a/src/components/ThePresentation/ThePresentation.scss
+++ b/src/components/ThePresentation/ThePresentation.scss
@@ -1,4 +1,6 @@
 .the-presentation {
+  display: flex;
+  justify-content: center;
   padding: 40px;
 }
 
